--- a/source/css/_module.footer.scss
+++ b/source/css/_module.footer.scss
@@ -6,7 +6,7 @@
   padding: $pad*2 0;
 
   &--inner {
-    width: 100%;
+    //width: 100%;
 
     > .l-grid-item {
       @include media('<=medium') {
@@ -34,6 +34,7 @@
 
   &__secondary-nav {
     order: 3;
+    flex-shrink: 0;
 
     @include media('>medium') {
       margin-top: $space*2;
